CHANGELOG.md
@@ -7,6 +7,14 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+## [24.08.3]
+
+### Fixed
+
+* Issue #465799: Segmentation fault no longer occurs when .conf file is missing on first launch.
+
+## [24.08.0]
+
 ### Added
 
 * Added more icons to menu actions.
